# fossil-crabdb

.github/workflows/: meson_ci.yml
code/logic/: bluecrab.c  meson.build  query.c  storage.c
code/logic/fossil/crabdb/: bluecrab.h  storage.h
code/tests/: meson.build  test_crabsearch.cpp
code/tests/tools/: generate-runner.py
code/tests/with_c/: meson.build  test_crabql.c
code/tests/with_cpp/: meson.build  test_crabdb.cpp  test_crabql.cpp  test_crabsearch.cpp  test_crabsync.cpp
subprojects/: fossil-test.wrap
